<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="82dp"
            android:layout_height="70dp"
            android:background="#00750808"
            android:src="@drawable/amrin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/lbl_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/posts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/lbl_post_count"
            tools:text="Posts" />

        <TextView
            android:id="@+id/lbl_post_count"
            android:layout_width="22dp"
            android:layout_height="19dp"
            android:layout_marginTop="56dp"
            android:text="@string/lbl_post_count"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="28" />

        <TextView
            android:id="@+id/lbl_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/lbl_follower_count"
            tools:text="Followers" />

        <TextView
            android:id="@+id/lbl_follower_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/lbl_follower_count"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1M" />

        <TextView
            android:id="@+id/lbl_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/lbl_post_count"
            tools:text="Following" />

        <TextView
            android:id="@+id/lbl_following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/lbl_Following_count"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1.089" />

        <TextView
            android:id="@+id/lbl_nama"
            android:layout_width="305dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_nama"
            android:textColor="#572A2A"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/lbl_bio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/profile_bio_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile"
            app:layout_constraintVertical_bias="0.071" />

        <TextView
            android:id="@+id/lbl_bio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/profile_bio_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_bio_2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_follow"
            android:layout_width="134dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:text="@string/profile_btn_follow"
            android:textSize="12sp"
            app:backgroundTint="#0794FF"
            app:cornerRadius="10dp"
            app:iconPadding="-35dp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_followers"
            app:layout_constraintVertical_bias="0.161" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:text="@string/Profile_message"
            android:textSize="12sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconPadding="-6dp"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_send_message"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toEndOf="@+id/btn_follow"
            app:layout_constraintTop_toBottomOf="@+id/lbl_post"
            app:layout_constraintVertical_bias="0.165" />

        <Button
            android:id="@+id/btn_send_message"
            android:layout_width="55dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/profile_more"
            android:textSize="12sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconPadding="-6dp"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_post"
            app:layout_constraintVertical_bias="0.165" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>